--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ section h2::after {
       <li><a href="#services">Services</a></li>
       <li><a href="#testimonials">Testimonials</a></li>
       <li><a href="#news">News</a></li>
-      <li><a href="login.html">SignIn</a></li>
+      <li><a href="login.html">Sign in</a></li>
 <li><a href="register.html">Register</a></li>
 
     </ul>
