--- a/patient-dashboard.html
+++ b/patient-dashboard.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 p-6">
+<body class="bg-[linear-gradient(to_right,_#bfdbfe_0%,_#bfdbfe_20%,_white_100%)] p-6">
+
   <div class="max-w-5xl mx-auto space-y-6">
      <!-- Profile Header -->
     <div class="flex items-center gap-4 cursor-pointer" id="profileLink">
