--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -133,7 +133,7 @@
   </div>
 
   <script>
-    const API   = "http://localhost:3000/api";
+    const API   = "https://healthcareapi.azurewebsites.net/api";
     const token = localStorage.getItem("token");
     const role  = (localStorage.getItem("role") || "").toLowerCase();
 
