--- a/doctorProfile.html
+++ b/doctorProfile.html
@@ -34,7 +34,7 @@
   </div>
 
   <script>
-    const API   = "https://healthcareapi.azurewebsites.net/api";
+    const API   = "https://healthcareapi-afeqega5ghgkh6hg.centralindia-01.azurewebsites.net/api";
     const token = localStorage.getItem("token");
     const role  = (localStorage.getItem("role") || "").toLowerCase();
 
