--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
   </div>
 
   <script>
-    const API = "https://healthcareapi.azurewebsites.net/api";
+    const API = "https://healthcareapi-afeqega5ghgkh6hg.centralindia-01.azurewebsites.net/api";
 
     function setMsg(text="", type="info"){
       const el = document.getElementById("msg");
