--- a/register.html
+++ b/register.html
@@ -186,7 +186,7 @@
 </div>
 
   <script>
-    const API = "https://healthcareapi.azurewebsites.net/api";
+    const API = "https://healthcareapi-afeqega5ghgkh6hg.centralindia-01.azurewebsites.net/api";
 
     const roleRadios = document.querySelectorAll('input[name="role"]');
     const patientSection  = document.getElementById("patientSection");
