record issue fixed

--- a/patient-dashboard.html
+++ b/patient-dashboard.html
@@ -73,19 +73,51 @@
     </section>
 
     <!-- My files -->
-    <section class="bg-white rounded shadow p-4">
-      <div class="flex items-center justify-between">
-        <h2 class="font-semibold">My Medical Files</h2>
-        <form id="uploadForm" class="flex items-center gap-2">
-          <input type="file" id="fileInput" class="text-sm" accept=".pdf,.jpg,.jpeg,.png" required />
-          <button type="submit" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 text-sm">
-            Upload
-          </button>
-        </form>
-      </div>
-      <p id="uploadMsg" class="text-sm mt-1 hidden"></p>
-      <ul id="recordsList" class="list-disc list-inside text-sm text-blue-700 mt-2"></ul>
-    </section>
+    <!-- My files -->
+<section class="bg-white rounded shadow p-4">
+  <div class="flex items-center justify-between mb-3">
+    <h2 class="font-semibold">My Medical Files</h2>
+  </div>
+
+  <form id="uploadForm" class="grid md:grid-cols-3 gap-3 items-end">
+    <!-- File -->
+    <div>
+      <label class="block text-sm font-medium">Select File</label>
+      <input type="file" id="fileInput" accept=".pdf,.jpg,.jpeg,.png"
+             class="mt-1 text-sm" required />
+    </div>
+
+    <!-- Doctor -->
+    <div>
+      <label class="block text-sm font-medium">Doctor</label>
+      <select id="doctorSelect"
+              class="mt-1 w-full border px-2 py-1 rounded text-sm"
+              required>
+        <option value="">Select a doctor</option>
+      </select>
+    </div>
+
+    <!-- Description -->
+    <div>
+      <label class="block text-sm font-medium">Description</label>
+      <input type="text" id="descriptionInput"
+             placeholder="e.g., Blood test report"
+             class="mt-1 w-full border px-2 py-1 rounded text-sm" />
+    </div>
+
+    <!-- Submit -->
+    <div class="md:col-span-3 flex justify-end">
+      <button type="submit"
+              class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">
+        Upload
+      </button>
+    </div>
+  </form>
+
+  <p id="uploadMsg" class="text-sm mt-1 hidden"></p>
+  <ul id="recordsList" class="list-disc list-inside text-sm text-blue-700 mt-2"></ul>
+</section>
+
 
     <!-- Appointments -->
     <section class="bg-white rounded shadow p-4">
@@ -167,6 +199,59 @@ const toIST = (dt) => {
       el.classList.remove("hidden");
       if (id !== "bookMsg") setTimeout(() => setMsg(id, ""), 1500);
     }
+
+
+// Populate doctor dropdown (reuse loadDoctors)
+async function loadDoctorsForUpload() {
+  try {
+    const res = await fetch(`${API}/doctor/list`);
+    const docs = await res.json();
+    const sel = document.getElementById("doctorSelect");
+    sel.innerHTML = `<option value="">Select a doctor</option>`;
+    docs.forEach(d => {
+      const opt = document.createElement("option");
+      opt.value = d.full_name; // ✅ we need name because backend expects doctorName
+      opt.textContent = `${d.full_name} (${d.specialization})`;
+      sel.appendChild(opt);
+    });
+  } catch {
+    setMsg("uploadMsg", "Failed to load doctors", "error");
+  }
+}
+
+document.getElementById("uploadForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const f   = document.getElementById("fileInput").files[0];
+  const doc = document.getElementById("doctorSelect").value;
+  const desc = document.getElementById("descriptionInput").value.trim();
+
+  if (!f || !doc) return setMsg("uploadMsg", "File and doctor required", "error");
+
+  try {
+    const fd = new FormData();
+    fd.append("file", f);
+    fd.append("doctorName", doc);
+    if (desc) fd.append("description", desc);
+
+    const res = await fetch(`${API}/records/upload`, {
+      method: "POST",
+      headers: { "Authorization": "Bearer " + token },
+      body: fd
+    });
+
+    const data = await res.json();
+    if (!res.ok) return setMsg("uploadMsg", data.error || "Upload failed", "error");
+
+    setMsg("uploadMsg", "✅ Uploaded");
+    document.getElementById("fileInput").value = "";
+    document.getElementById("descriptionInput").value = "";
+    document.getElementById("doctorSelect").value = "";
+    loadMyFiles();
+  } catch {
+    setMsg("uploadMsg", "Server error", "error");
+  }
+});
+
 
     /* ---------- Doctors & availability ---------- */
     let currentDoctor = null;
@@ -368,28 +453,6 @@ document.getElementById("bookBtn").addEventListener("click", async () => {
       }
     }
 
-    document.getElementById("uploadForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const f = document.getElementById("fileInput").files[0];
-      if (!f) return setMsg("uploadMsg", "Choose a file", "error");
-      try {
-        const fd = new FormData(); fd.append("file", f);
-        const res = await fetch(`${API}/records/upload`, {
-          method: "POST",
-          headers: { "Authorization": "Bearer " + token },
-          body: fd
-        });
-        if (res.status === 401) { localStorage.clear(); return location.replace("login.html"); }
-        const data = await res.json();
-        if (!res.ok) return setMsg("uploadMsg", data.error || "Upload failed", "error");
-        setMsg("uploadMsg", "✅ Uploaded");
-        document.getElementById("fileInput").value = "";
-        loadMyFiles();
-      } catch {
-        setMsg("uploadMsg", "Server error", "error");
-      }
-    });
-
     window.deleteFile = async function(recordId) {
       if (!confirm("Delete this file?")) return;
       try {
@@ -531,6 +594,7 @@ function formatDateToIST(dateString) {
     (async () => {
       loadProfileHeader();
       await loadDoctors();
+      await loadDoctorsForUpload();
       await loadAppointments();
       await loadMyFiles();
     })();
