--- a/patientFiles.html
+++ b/patientFiles.html
@@ -27,7 +27,7 @@
         <!-- Navbar -->
         <header class="flex items-center justify-between border-b pb-2 mb-4">
             <nav class="flex gap-6">
-                <a href="patientDashboard.html" class="font-semibold text-lg text-gray-600 hover:text-green-700">
+                <a href="patient-dashboard.html" class="font-semibold text-lg text-gray-600 hover:text-green-700">
                     My Appointments
                 </a>
                 <a href="patientFiles.html"
